# sgpy

./: .coveragerc  .editorconfig  .pre-commit-config.yaml  AUTHORS.rst  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  CONTRIBUTING.rst  Dockerfile  LICENSE.md  Makefile  README.md  Take an input BGC.md  Untitled-2.cql  contributor_agreement.md  coordinates.cypher  environment.yaml  environment.yml  extractl_antismash_region_gbk.py  make_small_antismash_json.py  mibig_smiles.py  new_search.py  new_search2.py  newclustermap.py.py  pyproject.toml  pytest.ini  release-please-config.json  rew.py  search_final.py  setup.cfg  setup.py  temp.py  temp3.py  temp4.py  testsearch.py  zz.p
.github/: CODE_OF_CONDUCT.md  FUNDING.yml  dependabot.yml
.github/PULL_REQUEST_TEMPLATE/: base.md
.github/cla/: cla.json
.github/workflows/: cla.yml  dev_ci.yml  linters.yml  pr_ci.yml  pypi_autodeploy_python.yml  release_please.yml
docker/: Dockerfile
docker/sgpy_base/: Dockerfile  environment.yaml
signatures/version1/: cla.json
socialgene/: __init__.py  common_parameters.env  config.py  sds.py
socialgene/addons/: __init__.py  base.py  chebi.py  chembl.py  chemistry.py  classyfire.py  gnps.py  gnps_library.py  gnps_networking.py  mibig.py  nodes.py  npatlas.py  npclassifier.py  npmrd.py  publication.py  rhea.py  ttd.py
socialgene/addons/antismash/: nr.py
socialgene/addons/chebi/: chebi.py  nr.py
socialgene/addons/chembl/: nr.py
socialgene/addons/chemistry/: cli_similarity.py  nr.py  substruct.py
socialgene/addons/classyfire/: classyfire.py  nr.py  parse.py
socialgene/addons/gene_cluster/: nr.py
socialgene/addons/gnps_library/: gnps_library.py  nr.py  parse.py
socialgene/addons/gnps_networking/: cli.py  gnps_networking.py  main.py  nr.py  parse.py
socialgene/addons/mibig/: link_cli.py  mibig.py  nr.py
socialgene/addons/npatlas/: cli.py  main.py  npatlas.py  nr.py  parse.py
socialgene/addons/npclassifier/: npclassifier.py  nr.py
socialgene/addons/npmrd/: nr.py
socialgene/addons/publication/: nr.py
socialgene/base/: chem.py  compare_protein.py  locus_metadata.py  molbio.py  searchneo4j.py  socialgene.py
socialgene/cli/: __main__.py  clean_hmms.py  create_neo4j_db.py  export_neo4j_header_files.py  export_protein_loci_assembly_tables.py  parameter_export.py  parse_ncbi_feature_tables.py  parse_ncbi_taxonomy.py  process_domtblout.py  protein_sqlite.py  socialgene_hmm_tsv_parser.py
socialgene/cli/external_mods/: gnps.py
socialgene/cli/neo4j/: indices.py  massage.py
socialgene/cli/nextflow/: clean_hmms.py  create_neo4j_db.py  export_neo4j_header_files.py  export_protein_loci_assembly_tables.py  parameter_export.py  parse_ncbi_taxonomy.py  process_domtblout.py
socialgene/cli/search/: gene_cluster.py  runalot.py  sea.py
socialgene/clustermap/: clustermap.py  old_clustermap.py  serialize.py
socialgene/compare_gene_clusters/: compare_gene_clusters.py
socialgene/compare_proteins/: base.py  base_class.py  diamond.py  hmm_scoring.py  hmmer.py  mmseqs.py  mmseqs_WIP.py
socialgene/compare_proteins/hmm/: hmmer.py  scoring.py
socialgene/data/: biosample_attributes
socialgene/dbmodifiers/classyfire/: import.py  importer.py
socialgene/dbmodifiers/massage/: indices.py  massage.py
socialgene/dbmodifiers/mibig/: compound.py  mmm.py  nrps.py  parse.py  pks.py
socialgene/dbmodifiers/npatlas/: import.py
socialgene/external_db_classes/: base_class.py  chebi.py  chembl.py  classyfire.py  gnps.py  mibig.py  npatlas.py  npmrd.py  publication.py  ttd.py
socialgene/findmybgc/: findmybgc.py
socialgene/hashing/: hashing.py
socialgene/hmm/: hmmer.py  hmminfo.py  hmmscan.py
socialgene/mmseqs/: create_database.py  index_database.py  search.py  subset_database.py
socialgene/neo4j/: admin_import.py  define_hmm.py  define_nodes.py  define_relationships.py  ingest_from_neo4j.py  module_abc.py  neo4j.py  neo4j_element.py  queries.cypher  relationship.py  sg_modules copy.py  sg_modules.py  single_protein_search.py  socialgene_modules.py  statements.cypher
socialgene/neo4j/schema/: define_hmmlist.py  define_modules.py  define_nodes.py  define_relationships.py  get_schema.py  graph_schema.py  module_abc.py  modules.py  neo4j_element.py  node.py  node_relationship_class.py  nodes.py  relationships.py  socialgene_modules.py
socialgene/neo4j/search/: basic.py
socialgene/neo4j/utils/: admin_import.py  ingest_from_neo4j.py
socialgene/nextflow/: nodes.py  params.py  relationships.py
socialgene/parsers/: datasets_parse.py  fasta.py  genbank.py  gff.py  hmm.py  hmmer_parser.py  hmmmodel.py  ncbi_feature_table.py  ncbi_taxonomy.py  sequence_parser.py
socialgene/scoring/: scoring.py  search.py
socialgene/search/: base.py  basic.py  hmmer.py  with_hmms.py
socialgene/taxonomy/: ncbi_taxonomy.py
socialgene/utils/: chunker.py  download.py  file_handling.py  get_ncbi_biosample_attributes.py  goterms.py  lists_to_markdown.py  logging.py  ncbi_ftp.py  nextflow_test_utils.py  np_json_converter.py  pandas_utils.py  ping.py  prep_ncbi_biosample_data.py  progress.py  protein_sqlite.py  run_subprocess.py  simple_math.py  untargz.py  version.py  writers.py
temp/: amrfinder  sg_hmm_nodes
tests/python/: generate_test_truths.py  test_autogen.py
tests/python/classes/: test_chem.py  test_hmm.py  test_mibig_fasta_parser.py  test_mibig_gbk_parser.py  test_sequence_parser.py  test_socialgene.py
tests/python/cli/: test_export_protein_loci_assembly_tables.py  test_process_domtblout.py
tests/python/clustermap/: test_clustermap.py
tests/python/compare_proteins/: compare_proteins.py  hmmer.py
tests/python/data/: BGC0000492.gbk  lagriamide_mibig_bgc0001946.gbk  lagriamide_mibig_bgc0001946_pfam_online_annotations_2022-01-11.csv  lagriamide_mibig_bgc0001946_pfam_online_annotations_2022-01-11.tsv  pks.hmm  pks.hmm.h3f  pks.hmm.h3m
tests/python/hashing/: test_hashing.py
tests/python/hmm/: test_annnotation.py  test_hmminfo.py
tests/python/neo4j/: test_neo4j.py  test_neo4j_admin_import.py  test_sg_modules.py
tests/python/neo4j_import/: test_admin_import.py  test_neo4j.py  (+1 more)
(+97 files in other folders)
